# chess

./: .gitignore  Cargo.toml  README.md  flake.nix
chess/: Cargo.toml  build.rs
chess/benches/: generate_fen.rs  perft.rs
chess/examples/: perft.rs
chess/generators/: axis.rs  bishop.rs  blockers.rs  king.rs  knight.rs  mod.rs  pawn.rs  rook.rs  writer.rs
chess/src/: lib.rs
chess/src/chessboard/: board.rs  board_raw.rs  builder.rs  mod.rs
chess/src/move_gen/: mod.rs  tables.rs
chess/src/move_gen/generators/: bishop.rs  king.rs  knight.rs  mod.rs  pawn.rs  queen.rs  rook.rs
chess/tests/: chessboard.rs  move_gen.rs  pieces.rs
types/: Cargo.toml
types/src/: bitboard.rs  castling.rs  castling_info.rs  error.rs  game_result.rs  lib.rs  magic.rs  move.rs  move_list.rs  piece.rs  side.rs  square.rs
types/tests/: bitboard.rs  castling.rs  magic.rs  movelist.rs  piece.rs  side.rs  square.rs
