[package]
name = "types"
readme = "../README.md"
description = "Chess library for chesslocal"
repository = "https://gitlab.com/chesslocal/chess"
license = "MIT"
keywords = ["chess", "chesslocal"]
categories = ["games"]
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", optional = true, features = ["derive"] }
serde_repr = { version = "0.1.20", optional = true }
ts-rs = { version = "11.1.0", optional = true }

[features]
serde = ["dep:serde", "dep:serde_repr"]
ts = ["serde", "dep:ts-rs"]
nightly = []
no_std = []
